Bug 428636 - spectacle crash
Summary: spectacle crash
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 20.08.2
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-03 11:35 UTC by Germano Massullo (Thetra)
Modified: 2020-12-02 11:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
GDB (143.02 KB, text/plain)
2020-11-03 11:35 UTC, Germano Massullo (Thetra)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Germano Massullo (Thetra) 2020-11-03 11:35:57 UTC
Created attachment 132985 [details]
GDB

spectacle-20.08.2 crashed on Xorg session. See attachment
Comment 1 Bug Janitor Service 2020-12-01 13:55:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/spectacle/-/merge_requests/41
Comment 2 Méven Car 2020-12-01 16:47:30 UTC
Git commit 5cfe216cb0b1d09a71c386fd69aa63f89be7b91b by Méven Car.
Committed on 01/12/2020 at 16:41.
Pushed by meven into branch 'master'.

PlatformKWinWayland: avoid recursion in readData

Plus avoids using usleep, using instead select

M  +29   -17   src/Platforms/PlatformKWinWayland.cpp

https://invent.kde.org/graphics/spectacle/commit/5cfe216cb0b1d09a71c386fd69aa63f89be7b91b
Comment 3 Méven Car 2020-12-02 11:12:08 UTC
Git commit 39bf3cad5d77e48d6e880b1c88dd31f487aa564c by Méven Car.
Committed on 02/12/2020 at 11:09.
Pushed by meven into branch 'release/20.12'.

PlatformKWinWayland: avoid recursion in readData

Plus avoids using usleep, using instead select

M  +29   -17   src/Platforms/PlatformKWinWayland.cpp

https://invent.kde.org/graphics/spectacle/commit/39bf3cad5d77e48d6e880b1c88dd31f487aa564c