PlatformKWinWayland: avoid recursion in readData

Plus avoids using usleep, using instead select

BUG: 428636